Training Optimizatins and Frontend Syntax Fixes (#21)
* Remove unnecessary comments from frontend hooks.

* Update the training servce implementation to remove the uncessary convert from DTO method.