@@ -1,11 +1,8 @@
 package app.training;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import app.business.BusinessPerson;
 import app.business.BusinessPersonRepository;
 import app.common.exception.ResourceNotFoundException;
@@ -20,18 +17,16 @@ public class TrainingServiceImpl implements TrainingService {
   private final TrainingRepository trainingRepository;
   private final BusinessPersonRepository businessPersonRepository;
 
-  public TrainingServiceImpl(
-      TrainingRepository trainingRepository, BusinessPersonRepository businessPersonRepository) {
+  public TrainingServiceImpl(TrainingRepository trainingRepository,
+      BusinessPersonRepository businessPersonRepository) {
     this.trainingRepository = trainingRepository;
     this.businessPersonRepository = businessPersonRepository;
   }
 
   @Override
   public TrainingDTO addTraining(Long personId, CreateTrainingRequest request) {
-    BusinessPerson person =
-        businessPersonRepository
-            .findById(personId)
-            .orElseThrow(() -> new ResourceNotFoundException("Person", "id", personId));
+    BusinessPerson person = businessPersonRepository.findById(personId)
+        .orElseThrow(() -> new ResourceNotFoundException("Person", "id", personId));
     Training training = createTrainingFromRequest(request);
     training.setPerson(person);
     Training saved = trainingRepository.save(training);
@@ -39,12 +34,8 @@ public class TrainingServiceImpl implements TrainingService {
   }
 
   private Training createTrainingFromRequest(CreateTrainingRequest request) {
-    return new Training(
-        request.trainingName(),
-        request.description(),
-        request.completionDate(),
-        request.expiryDate(),
-        request.required());
+    return new Training(request.trainingName(), request.description(), request.completionDate(),
+        request.expiryDate(), request.required());
   }
 
   @Override
@@ -54,9 +45,7 @@ public class TrainingServiceImpl implements TrainingService {
       throw new ResourceNotFoundException("Person", "id", personId);
     }
 
-    return trainingRepository.findByPersonId(personId).stream()
-        .map(this::convertToDTO)
-        .collect(Collectors.toList());
+    return trainingRepository.findByPersonId(personId).stream().map(this::convertToDTO).toList();
   }
 
   @Override
@@ -66,28 +55,22 @@ public class TrainingServiceImpl implements TrainingService {
       throw new ResourceNotFoundException("Person", "id", personId);
     }
 
-    return trainingRepository.findByPersonId(personId).stream()
-        .filter(Training::isExpired)
-        .map(this::convertToDTO)
-        .collect(Collectors.toList());
+    return trainingRepository.findByPersonId(personId).stream().filter(Training::isExpired)
+        .map(this::convertToDTO).toList();
   }
 
   @Override
   @Transactional(readOnly = true)
   public TrainingDTO getTrainingById(Long trainingId) {
-    Training training =
-        trainingRepository
-            .findById(trainingId)
-            .orElseThrow(() -> new ResourceNotFoundException("Training", "id", trainingId));
+    Training training = trainingRepository.findById(trainingId)
+        .orElseThrow(() -> new ResourceNotFoundException("Training", "id", trainingId));
     return convertToDTO(training);
   }
 
   @Override
   public TrainingDTO updateTraining(Long trainingId, UpdateTrainingRequest request) {
-    Training training =
-        trainingRepository
-            .findById(trainingId)
-            .orElseThrow(() -> new ResourceNotFoundException("Training", "id", trainingId));
+    Training training = trainingRepository.findById(trainingId)
+        .orElseThrow(() -> new ResourceNotFoundException("Training", "id", trainingId));
     if (request.trainingName() != null) {
       training.setTrainingName(request.trainingName());
     }
@@ -120,38 +103,18 @@ public class TrainingServiceImpl implements TrainingService {
   @Override
   @Transactional(readOnly = true)
   public List<TrainingDTO> getAllTrainings() {
-    return trainingRepository.findAll().stream()
-        .map(this::convertToDTO)
-        .collect(Collectors.toList());
-  }
-
-  // -------------------- Helper Methods --------------------
-
-  private Training createTrainingFromDTO(TrainingDTO dto) {
-    return new Training(
-        dto.getTrainingName(),
-        dto.getDescription(),
-        dto.getCompletionDate(),
-        dto.getExpiryDate(),
-        dto.isRequired());
+    return trainingRepository.findAll().stream().map(this::convertToDTO).toList();
   }
 
   private TrainingDTO convertToDTO(Training training) {
-    TrainingDTO.Builder builder =
-        TrainingDTO.builder()
-            .withId(training.getId())
-            .withTrainingName(training.getTrainingName())
-            .withDescription(training.getDescription())
-            .withCompletionDate(training.getCompletionDate())
-            .withExpiryDate(training.getExpiryDate())
-            .withRequired(training.isRequired())
-            .withCompleted(training.isCompleted())
-            .withExpired(training.isExpired())
-            .withCreatedAt(training.getCreatedAt());
+    TrainingDTO.Builder builder = TrainingDTO.builder().withId(training.getId())
+        .withTrainingName(training.getTrainingName()).withDescription(training.getDescription())
+        .withCompletionDate(training.getCompletionDate()).withExpiryDate(training.getExpiryDate())
+        .withRequired(training.isRequired()).withCompleted(training.isCompleted())
+        .withExpired(training.isExpired()).withCreatedAt(training.getCreatedAt());
 
     if (training.getPerson() != null) {
-      builder
-          .withPersonId(training.getPerson().getId())
+      builder.withPersonId(training.getPerson().getId())
           .withPersonName(training.getPerson().getName())
           .withPersonType(training.getPerson().getPersonType());
     }
